css/style.css
body {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;

    display: flex;
  }
/*  NAVIGATION MENU */
nav {
    width: 250px;
    height: 100vh;
    color: white;
    padding-right: 20px;
    border-right: 1px solid #1E47C4;
    position: fixed;
    display: flex;
    flex-direction: column;
    text-transform: uppercase;
    font-weight: 700;
    justify-content:flex-start;
    align-items: center;
}
a {
    text-decoration: none;
}
.logo {
    height: 150px;
    width: 150px;
    padding: 2em;
}
nav a {
    color: #333334;
}
nav a:hover {
    color:#1E47C4;
}
.social-icon {
    height: 22px;
    width: 22px;
    align-items: center;
}
.icon {
    height: 100%;
    width: 100%;
}
.icon:hover {
    fill: #1E47C4;
}
.social-media {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

main {
    margin-left: 300px;
    padding: 1em;
    width: 100%;
}


/* HOME PAGE */
/* Reference for animated gradient text in the following section https://www.amitmerchant.com/animated-gradient-effect-in-css/ */
h1 {
    font-family: arial;
    font-size: 5em;
    margin: auto;

    background: linear-gradient(40deg,
          #7953cd 20%,
          #00affa 30%,
          #29f0be 70%,
          #0ddb3d 80%
      );
      -webkit-background-clip: text;
      background-clip: text;
      -webkit-text-fill-color: transparent;
      background-size: 500% auto;
      animation: shine 3s ease-in-out infinite alternate;
  }
  
  @keyframes shine {
      0% {
          background-position: 0% 50%;
      }
      100% {
          background-position: 100% -50%;

      }
  }
  
h2{
    font-weight: 800;
    text-transform: uppercase;
    font-size: 2em;
    color:#1E47C4;
}

h3 {
    font-weight: 700;
    font-size: 2em;
}

.cover {
    width: 100%;
    text-align: center;
}
.gallery {
    display: flex;
    flex-wrap: wrap;
}
.gallery div {
    width: 40%;
    max-height: 10%;
    margin: 1em;
    overflow:hidden;
}
.gallery img {
    height: auto;
    transition: transform 0.4s ease;   
}
.gallery img:hover {
    transform: scale(1.2);
    width: 100%;
}
/* 
STYLING FOR GRID FOR PROJECTS PAGES */
.container {
    margin-bottom: 1em;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}
li {
    text-decoration: none;
    list-style: none;
}
.container .info {
    max-width: 45%;
    max-height: 100vh;
}
.tags {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}
img {
    width: 100%;
}
/* Following styling witht he help of https://cssgrid-generator.netlify.app/ */
.proj {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    grid-column-gap: 20px;
    grid-row-gap: 20px;
}

.independent1 {
    width: 100%;
    grid-area: 1 / 1 / 2 / 2;
}
.independent2 {
    grid-area: 1 / 2 / 2 / 3;
}
.independent3 {
    grid-area: 2 / 2 / 4 / 3;
}
.independent4 {
    grid-area: 2 / 1 / 4 / 2;
}
.independent5 {
    grid-area: 2 / 3 / 4 / 4;
}
.independent6 {
    grid-area: 1 / 3 / 2 / 4;
}


.independent7 {
    grid-area: 1 / 2 / 2 / 3;
}
.independent8 {
    grid-area: 1 / 1 / 2 / 2;
}
.independent9 {
    grid-area: 2 / 1 / 3 / 3;
}
.independent10 {
    grid-area: 1 / 3 / 3 / 4;
}
.independent11 {
    grid-area: 2 / 3 / 3 / 4;
}
.independent12 {
    grid-area: 3 / 3 / 4 / 4;
}

.menu1 {
    grid-area: 1 / 1 / 3 / 3;
}
.menuGif {
    grid-area: 1 / 3 / 3 / 4;
}
.menu2 {
    grid-area: 3 / 1 / 4 / 2;
}
.menu3 {
    grid-area: 3 / 2 / 4 / 3;   
}
.menu4 {
    grid-area: 3 / 3 / 4 / 4;
}
.menu5 {
    grid-area: 4 / 2 / 6 / 4;
}
.menu7 {
    grid-area: 6 / 1 / 7 / 2;
}
.menu8 {
    grid-area: 6 / 2 / 8 / 4;
}

.ad1 {
    grid-area: 1 / 1 / 5 / 2;
}
.ad4 {
    grid-area: 1 / 2 / 3 / 3;
}
.ad2 {
    grid-area: 3 / 2 / 7 / 3;
}
.ad5 {
    grid-area: 5 / 1 / 7 / 2;
}
.ad3 {
    grid-area: 1 / 3 / 5 / 4;
}
.ad6 {
    grid-area: 5 / 3 / 7 / 4;
}

.magazine1 {
    grid-area: 1 / 2 / 4 / 4;
}
.magazine2 {
    grid-area: 1 / 1 / 4 / 2;
}
.magazine3 {
    grid-area: 6 / 3 / 7 / 4;
}
.magazine4 {
    grid-area: 4 / 1 / 5 / 4;
}
.magazine5 {
    grid-area: 5 / 1 / 7 / 3;
}
.magazine6 {
    grid-area: 5 / 3 / 6 / 4;
}

.tech1 {
    grid-area: 1 / 1 / 4 / 4;
}
.tech2 {
    grid-area: 4 / 1 / 6 / 3;
}
.tech { 
    grid-area: 4 / 3 / 6 / 4;
}


.can1 {
    grid-area: 1 / 1 / 2 / 2;
}
.can2 {
    grid-area: 1 / 2 / 2 / 3;
}
.can3 {
    grid-area: 1 / 3 / 2 / 4;
}

/* ABOUT PAGE */
.about {
    padding: 2em;
    margin-top: 4em;
    display: flex;
    flex-wrap: wrap;
    align-content: center;

}
.about section {
    width: 40%;
}
.about img { 
    width: 400px;
}


.form-control {
    margin-bottom: 10px;
    padding-bottom: 20px;
  }
  
.form-control label {
    display: inline-block;
    margin-bottom: 5px;
  }
  
.form-control input {
    border: 2px solid #e0e0e0;
    border-radius: 4px;
    font-family: inherit;
    font-size: 14px;
    padding: 10px;
    width: 40%;
  }
  
.form-control input:focus {
    outline: 0;
    border-color: #b9152e;
  }
  
  /* MEDIA QUERIES */
@media screen and (max-width: 580px) {
    body {
        display: flex;
        flex-direction: column;

    }
    nav {
        flex-direction: row;
        border: none;
        height: auto;
        width: 100vw;
        position: static;
        padding: 0;
    }
    .social-media {
        display: none;
    }
    main {
        margin: auto;
        padding: 0;
    }
    .gallery div{
        width: 100%;
    }
    .container {
        width: 100%;
        display: flex;
        flex-direction: column;
    }
    .container .info{
        flex-direction: column;
        width: 100%;
        height: auto;

    }

}

button {
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
    width: 150px;
    height: 50px;
    font-size: 1em;
}
input {
    border: 5px solid #9fcce0;
}

